--- a/cv-med-css/index.html
+++ b/cv-med-css/index.html
@@ -11,8 +11,11 @@
 
   <meta charset="utf-8">
   <title>Feedback please</title>
-  <meta name="description" content="">
+  <meta name="description" content="Curriculum Vitae">
+  <meta name="keywords" content="HTML, CSS, JavaScript">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Fredrik Karlsson">
+  
 
   <meta property="og:title" content="">
   <meta property="og:type" content="">
@@ -45,25 +48,26 @@
     <h3>Contact me</h3>
 
     <section>
-      <h5>ADDRESS</h5>
+      <h4>ADDRESS</h4>
       <p>Programmerargatan 1<br>
       1337 69, Kodby</p>
     </section>
 
     <section>
-      <h5>WEB</h5>
+      <h4>WEB</h4>
       <p>fredrik.karlsson@medieinstitutet.se<br>
       www.fredrikkarlsson.com</p>
     </section>
 
     <section>
-      <h5>PHONE</h5>
+      <h4>PHONE</h4>
       <p>070-133 76 96<br>
       08-69 69 69</p>
     </section>
 
+    <h3>Hobbies</h3>
+
     <section>
-      <h3>Hobbies</h3>
       <ul>
         <li>Cryptocurrency & NFTS</li>
         <li>Padel</li>
@@ -77,7 +81,7 @@
   <article>
 
     <section>
-      <h4>Education</h4>
+      <h5>Education</h5>
       <dl>
         <dt><b>1996-2005</b></dt>
         <dd>- Elementary school</dd>
@@ -87,7 +91,7 @@
     </section>
   
     <section>
-      <h4>Experience</h4>
+      <h5>Experience</h5>
       <dl>
         <dt><b>2008-2010</b></dt>
         <dd>- Pressbyrån</dd>
