--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="en-us">
+<html class="no-js" lang="en">
 
 <head>
 
@@ -26,95 +26,51 @@
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+
 
   <meta name="theme-color" content="#fafafa">
 </head>
 
 <body>
 
-  <!-- Add your site or application content here -->
-
-
   <header>
-    <h1>Fredrik Karlsson</h1>
-    <h2>- Blockchain Student</h2>
+    <div class="flex primary-header">
+      <img src="images/HabitStackers_LOGOp.png" alt="logo" class="logo">
+      <nav>
+          <ul id="primary-navigation" class="primary-navigation flex">
+              <li class="active">
+                  <a href="index.html">
+                      <span aria-hidden="true">00</span>Home
+                  </a>
+              <li>
+                  <a href ="about.html">
+                      <span aria-hidden="true">01</span>About
+                  </a>
+              <li>
+                  <a href ="cv.html">
+                      <span aria-hidden="true">02</span>CV
+                  </a>
+          </ul>
+      </nav>
+    </div>
+    <h1>DeveloPro</h1>
+    <hr>
   </header>
 
+  <section>
+      <h2>Welcome</h2>
+  </section>
 
-  <article>
-
-    <h3>Contact me</h3>
-
-    <section>
-      <h4>ADDRESS</h4>
-      <p>Programmerargatan 1<br>
-      1337 69, Kodby</p>
-    </section>
-
-    <section>
-      <h4>WEB</h4>
-      <p>fredrik.karlsson@medieinstitutet.se<br>
-      www.fredrikkarlsson.com</p>
-    </section>
-
-    <section>
-      <h4>PHONE</h4>
-      <p>070-133 76 96<br>
-      08-69 69 69</p>
-    </section>
-
-    <h3>Hobbies</h3>
-
-    <section>
+  <footer>
+      <h3>DeveloPro</h3>
       <ul>
-        <li>Cryptocurrency & NFTS</li>
-        <li>Padel</li>
-        <li>Coding</li>
+          <li>LinkedIn</li>
+          <li>Twitter</li>
+          <li>Github</li>
       </ul>
-	  </section>
-
-  </article>
-
-				
-  <article>
-
-    <section>
-      <h5>Education</h5>
-      <dl>
-        <dt><b>1996-2005</b></dt>
-        <dd>- Elementary school</dd>
-        <dt><b>2005-2008</b></dt>
-        <dd>- High school</dd>
-      </dl>
-    </section>
-  
-    <section>
-      <h5>Experience</h5>
-      <dl>
-        <dt><b>2008-2010</b></dt>
-        <dd>- Pressbyrån</dd>
-        <dt><b>2010-2012</b></dt>
-        <dd>- Travelled Australia with a working visa</dd>
-        <dt><b>2012-present time</b></dt>
-        <dd>- Working with my own company, Algorithmia AB</dd>
-      </dl>
-    </section>
-
-  </article>
-
-
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
-
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
+  </footer>
 </body>
-
-</html>
